# gameoflife.cpp

./: .gitignore  CMakeLists.txt  README.md
lib/imgui/: imconfig.h
src/: main.cpp
